# cider

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: linting.yaml  unittests.yml
cider/: datastore.py  featurizer.py  home_location.py
cider/deprecated/: home_location.py
cider/deprecated/helpers/: plot_utils.py
cider/deprecated/tests/: test_datastore.py
cider/homelocation/: dependencies.py  inference.py  plotting.py  schemas.py
deprecated/: anonymizer.py  data_checker.py  datastore.py  fairness.py  featurizer.py  home_location.py  ml.py  satellite.py  survey.py  targeting.py
deprecated/data_format/: data_format.yml
deprecated/helpers/: __init__.py  features.py  features_utils.py  io_utils.py  ml_utils.py  opt_utils.py  plot_utils.py  satellite_utils.py  utils.py
deprecated/tests/: test_datastore.py
helpers/: features.py  features_utils.py  io_utils.py  utils.py
notebooks/: featurizer.ipynb  homelocation.ipynb  survey_tests.ipynb  survey_togo.ipynb
old_notebooks/: automl_example.ipynb  automl_togo.ipynb  featurizer_tests.ipynb  homelocation_tests.ipynb  io_tests.ipynb  survey_togo.ipynb  targeting_fairness_togo.ipynb  test.ipynb  test_notebook.ipynb
src/cider/: schemas.py
src/cider/catchall/: schems.py
src/cider/featurizer/: dependencies.py  inference.py  plotting.py  schemas.py
src/cider/homelocation/: inference.py  plotting.py  schemas.py
tests/: conftest.py  test_featurizer.py  test_homelocation.py
